fixed scrollbar bouncing + added reloatd to top

--- a/src/styles.css
+++ b/src/styles.css
@@ -13,6 +13,8 @@ body {
     padding: 0px;
     height: 100vh;
     min-width: 100vw;
+
+    overflow: hidden;
 }
 
 html, body {
@@ -261,6 +263,7 @@ input {
 
 
 .icons {
+    position: relative;
     height: 9%;
 }
 
